# iec61850_open_server

./: CMakeLists.txt  Dockerfile.circuit_simulator  Dockerfile.libiec61850_server  README.md  substation.simulator.yml  substation.yml
.github/workflows/: docker-publish.yml
circuit_simulator/: requirements.txt
inc/: string_utilities.h
model_input_generator/: build2_inp.sh  build_docker.sh  build_inp.sh
model_input_generator/src/com/libiec61850/scl/: SclParser.java
model_input_generator/src/com/libiec61850/scl/model/: LogicalNode.java
model_input_generator/src/com/libiec61850/tools/: DockerComposeGenerator.java
plugin/python_app/: app.py
plugin_src/cbr_process/: CMakeLists.txt
plugin_src/cbr_simulation/: CMakeLists.txt
plugin_src/local_sample_simulation/: CMakeLists.txt
plugin_src/python/: CMakeLists.txt
plugin_src/simulation_process/: CMakeLists.txt
scd/: protection_relay.scd
